--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -22,6 +22,10 @@
 
     <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
     <button>Change user </button>
+    
+    <label> <input type="checkbox" id="one" onchange="getChecked()" Пример Чекбокс> </label>
+
     <script src="scripts/main.js"></script>
+    <script src="scripts/checkbox.js"></script>
   </body>
 </html>
