--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -23,15 +23,16 @@
 
     <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
     <button>Change user </button>
+    <br>
     <!-- checkbox.js -->
-    <label> <input type="checkbox" id="one" onchange="getChecked()" Пример Чекбокс> </label>
+    <label> <input type="checkbox" id="one" onchange="getChecked()"> Пример Чекбокс </label>
     <br>
     <!-- input_type_radio.js-->
     <input type="radio" name="about_user" value="male"> male
     <input type="radio" name="about_user" value="female"> female
     <input type="radio" name="about_user" value="child"> child
     <button id="btn_input">Проверяем что выбрано</button>
-
+    <br>
     <!--  -->
     <script src="scripts/main.js"></script>
     <script src="scripts/checkbox.js"></script>
