Add function Выпадающий список selector_option_fruits.js

--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -33,9 +33,19 @@
     <input type="radio" name="about_user" value="child"> child
     <button id="btn_input">Проверяем что выбрано</button>
     <br>
+
+    <!-- Выпадающий список selector_option_fruits.js -->
+
+    <select name="" id="my_select">
+      <option value="">Apple</option>
+      <option value="">Orange</option>
+      <option value="">Pineapple</option>
+      <option value="">Banana</option>
+    </select>
     <!--  -->
     <script src="scripts/main.js"></script>
     <script src="scripts/checkbox.js"></script>
     <script src="scripts/input_type_radio"></script>
+    <script src="scripts/selector_option_fruits.js"></script>
   </body>
 </html>
