--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -42,10 +42,20 @@
       <option value="">Pineapple</option>
       <option value="">Banana</option>
     </select>
+    <br>
+
+    <!-- ползунок со значением input_type_range -->
+    <input type="range" min="0" max="100" step="5" id="inp_type_range">
+    <p id="inp_type_range_valuy_p"></p>
+    
+    
+
+
     <!--  -->
     <script src="scripts/main.js"></script>
     <script src="scripts/checkbox.js"></script>
-    <script src="scripts/input_type_radio"></script>
+    <script src="scripts/input_type_radio.js"></script>
     <script src="scripts/selector_option_fruits.js"></script>
+    <script src="scripts/input_type_range.js"></script>
   </body>
 </html>
