Add scss and css

--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My test page</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="scss/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <!--  main.js Приветствие, смена картинки по клику, сохранение имени юзера -->
@@ -25,9 +25,14 @@
     <button>Change user </button>
     <br>
     <!-- checkbox.js -->
+
+    <h3>checkbox </h3>
     <label> <input type="checkbox" id="one" onchange="getChecked()"> Пример Чекбокс </label>
     <br>
+
+
     <!-- input_type_radio.js-->
+    <h3>input_type_radio</h3>
     <input type="radio" name="about_user" value="male"> male
     <input type="radio" name="about_user" value="female"> female
     <input type="radio" name="about_user" value="child"> child
@@ -35,6 +40,7 @@
     <br>
 
     <!-- Выпадающий список selector_option_fruits.js -->
+    <h3>Выпадающий список selector_option_fruits</h3>
 
     <select name="" id="my_select">
       <option value="">Apple</option>
@@ -45,8 +51,14 @@
     <br>
 
     <!-- ползунок со значением input_type_range -->
+    <h3>ползунок со значением input_type_range</h3>
     <input type="range" min="0" max="100" step="5" id="inp_type_range">
     <p id="inp_type_range_valuy_p"></p>
+
+    <!-- Создаем CSS Генератор -->
+    <h3>Создаем CSS Генератор</h3>
+
+    <h3>создаем CSS генератор </h3>
     
     
 
