Add a function with modal window

--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -103,6 +103,15 @@
       </div>
     </div>
     
+  <!-- Модальные окна modal_window.js -->
+  <h3>Модальные окна modal_window.js</h3>
+  <button id="btn_modal_window">Open Modal</button>
+  <div id="my_modal" class="modal">
+    <div class="modal_content">
+      <span class="close_modal_window">&times;</span>
+      <p>Модальное окно!</p>
+    </div>
+  </div>
 
     <!--  -->
     <script src="scripts/main.js"></script>
@@ -111,7 +120,8 @@
     <script src="scripts/selector_option_fruits.js"></script>
     <script src="scripts/input_type_range.js"></script>
     <script src="scripts/generation_for_css.js"></script>
-    <script src="scripts//tabs.js"></script>
+    <script src="scripts/tabs.js"></script>
+    <script src="scripts/modal_window.js"></script>
 
   </body>
 </html>
