Put the button and text close

--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <!--  main.js Приветствие, смена картинки по клику, сохранение имени юзера -->
-    <h1>Mozilla is cool</h1>
+    <h1>Уроки JavaScript Практика от Web Developer Blog</h1>
+    <h3>Нажми на лису</h3>
     <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
     <p>At Mozilla, we’re a global community of</p>
@@ -102,7 +103,7 @@
         </div>
       </div>
     </div>
-    
+    <br>
   <!-- Модальные окна modal_window.js -->
   <h3>Модальные окна modal_window.js</h3>
   <button id="btn_modal_window">Open Modal</button>
@@ -110,8 +111,39 @@
     <div class="modal_content">
       <span class="close_modal_window">&times;</span>
       <p>Модальное окно!</p>
+
     </div>
   </div>
+
+  <br>
+  <!-- Как сделать слайдер carousel.js -->
+  <!-- <h3>Как сделать слайдер (Carousel)</h3>
+  <div class="slideshow_container">
+    <div class="my_slides fade">
+      <div class="numbertext">1/3</div>
+      <img src="images/forest.jpg" alt="forest" width="100%">
+      <div class="slideshow_text">Text</div>
+    </div>
+    <div class="my_slides fade">
+      <div class="numbertext">2/3</div>
+      <img src="images/mountains.jpg" alt="forest" width="100%">
+      <div class="slideshow_text">Text</div>
+    </div>
+    <div class="my_slides fade">
+      <div class="numbertext">3/3</div>
+      <img src="images/road.jpg" alt="forest" width="100%">
+      <div class="slideshow_text">Text</div>
+    </div> -->
+  
+    <br>
+    <!-- Нажми, чтобы спрятать текст -->
+    <h3>Нажми, чтобы спрятать текст</h3>
+    <input type="button" id="hider" value="Нажмите, чтобы спрятать текст" />
+    <div id="text">Текст</div>
+
+
+  </div>
+  
 
     <!--  -->
     <script src="scripts/main.js"></script>
@@ -122,6 +154,7 @@
     <script src="scripts/generation_for_css.js"></script>
     <script src="scripts/tabs.js"></script>
     <script src="scripts/modal_window.js"></script>
+    <script src="scripts/put_close_text.js"></script>
 
   </body>
 </html>
