--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -141,6 +141,10 @@
     <input type="button" id="hider" value="Нажмите, чтобы спрятать текст" />
     <div id="text">Текст</div>
 
+    <!-- Нажми, чтобы Меня спрятать текст -->
+    <h3>Нажми, чтобы меня спрятать текст</h3>
+    <input type="button" onclick="this.style.display='none'" value="Нажми, чтобы меня спрятать" />
+
 
   </div>
   
