Add menu, menu is open down onclick

--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -140,11 +140,22 @@
     <h3>Нажми, чтобы спрятать текст</h3>
     <input type="button" id="hider" value="Нажмите, чтобы спрятать текст" />
     <div id="text">Текст</div>
-
+    <br>
     <!-- Нажми, чтобы Меня спрятать текст -->
     <h3>Нажми, чтобы меня спрятать текст</h3>
     <input type="button" onclick="this.style.display='none'" value="Нажми, чтобы меня спрятать" />
 
+    <br>
+    <!-- Раскрывающееся меню menu_open_down -->
+    <h3>Раскрывающееся меню menu_open_down</h3>
+    <div id="sweeties" class="menu">
+      <span class="title">Сладости (нажми меня)!</span>
+      <ul>
+        <li>Торт</li>
+        <li>Пончик</li>
+        <li>Пирожное</li>
+      </ul>
+    </div>
 
   </div>
   
@@ -159,6 +170,7 @@
     <script src="scripts/tabs.js"></script>
     <script src="scripts/modal_window.js"></script>
     <script src="scripts/put_close_text.js"></script>
+    <script src="scripts/menu_open_down.js"></script>
 
   </body>
 </html>
