Add function carousel images . js. css

--- a/beginner-html-site-styled-gh-pages/index.html
+++ b/beginner-html-site-styled-gh-pages/index.html
@@ -188,6 +188,30 @@
 
   </div>
   
+  <br>
+    <hr>
+    <!-- Карусель картинок carousel.js  carousel.scss-->
+    <h3>Карусель картинок carousel.js  carousel.scss</h3>
+    <div class="carousel_box">
+      <div id="carousel" class="carousel">
+        <button class="arrow prev">⇦</button>
+        <div class="gallery">
+          <ul class="images">
+            <li><img src="https://js.cx/carousel/1.png"></li>
+            <li><img src="https://js.cx/carousel/2.png"></li>
+            <li><img src="https://js.cx/carousel/3.png"></li>
+            <li><img src="https://js.cx/carousel/4.png"></li>
+            <li><img src="https://js.cx/carousel/5.png"></li>
+            <li><img src="https://js.cx/carousel/6.png"></li>
+            <li><img src="https://js.cx/carousel/7.png"></li>
+            <li><img src="https://js.cx/carousel/8.png"></li>
+            <li><img src="https://js.cx/carousel/9.png"></li>
+            <li><img src="https://js.cx/carousel/10.png"></li>
+          </ul>
+        </div>
+        <button class="arrow next">⇨</button>
+      </div>
+    </div>
 
     <!--  -->
     <script src="scripts/main.js"></script>
@@ -201,6 +225,7 @@
     <script src="scripts/put_close_text.js"></script>
     <script src="scripts/menu_open_down.js"></script>
     <script src="scripts/close_window_x_.js"></script>
+    <script src="scripts/carousel.js"></script>
 
   </body>
 </html>
